tooling/nargo_cli/tests/snapshots/execution_success/regression_mem_op_predicate/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(mut x: [u32; 5], idx: Field) {
    if (idx as u32) < 3 { x[idx] = 10; };
    assert(x[4] == 111);
}
